@@ -28,12 +28,15 @@ import java.nio.channels.Channels;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.UUID;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 public final class BulkLoadPerfRunner {
 
@@ -62,6 +65,8 @@ public final class BulkLoadPerfRunner {
     private static final String STRATEGY_DIRECT = "DIRECT-CONVERT";
     private static final String STRATEGY_PARALLEL = "PARALLEL-CONVERT";
     private static final String STRATEGY_MERGE = "MERGE-THEN-CONVERT";
+    private static final long PROCESS_SAMPLE_INTERVAL_MS = 50L;
+    private static final long FALLBACK_CLK_TCK = 100L;
 
     private BulkLoadPerfRunner() {}
 
@@ -93,6 +98,11 @@ public final class BulkLoadPerfRunner {
             System.err.println("Error: " + e.getMessage());
             printHelp(options);
             System.exit(1);
+            return;
+        }
+
+        if (commandLine.hasOption("worker-mode")) {
+            runWorker(commandLine, config);
             return;
         }
 
@@ -128,7 +138,7 @@ public final class BulkLoadPerfRunner {
         options.addOption(Option.builder().longOpt("implementations").hasArg().argName("LIST").desc("实现列表：arrow-to-hfile,arrow-to-hfile-java").build());
         options.addOption(Option.builder().longOpt("scenario-filter").hasArg().argName("TEXT").desc("按场景 ID 过滤执行").build());
         options.addOption(Option.builder().longOpt("iterations").hasArg().argName("N").desc("固定为 3").build());
-        options.addOption(Option.builder().longOpt("parallelism").hasArg().argName("N").desc("JNI 大文件并行转换线程数").build());
+        options.addOption(Option.builder().longOpt("parallelism").hasArg().argName("N").desc("JNI 目录场景的 worker 内并行转换线程数；不同实现/轮次仍由父进程串行调度").build());
         options.addOption(Option.builder().longOpt("merge-threshold").hasArg().argName("MB").desc("JNI 小文件合并阈值").build());
         options.addOption(Option.builder().longOpt("trigger-size").hasArg().argName("MB").desc("JNI 合并攒批大小阈值").build());
         options.addOption(Option.builder().longOpt("trigger-count").hasArg().argName("N").desc("JNI 合并攒批文件数阈值").build());
@@ -142,7 +152,20 @@ public final class BulkLoadPerfRunner {
         options.addOption(Option.builder().longOpt("bloom").hasArg().argName("TYPE").desc("Bloom 类型").build());
         options.addOption(Option.builder().longOpt("error-policy").hasArg().argName("POLICY").desc("JNI 错误策略").build());
         options.addOption(Option.builder().longOpt("block-size").hasArg().argName("BYTES").desc("HFile block size").build());
+        options.addOption(Option.builder().longOpt("cpu-set").hasArg().argName("LIST").desc("Linux taskset CPU 集合，例如 0-3 或 1,3").build());
+        options.addOption(Option.builder().longOpt("process-memory-mb").hasArg().argName("MB").desc("子进程总内存硬限制，优先 cgroup v2，失败时退化为 prlimit").build());
+        options.addOption(Option.builder().longOpt("jni-xmx-mb").hasArg().argName("MB").desc("JNI worker JVM -Xmx").build());
+        options.addOption(Option.builder().longOpt("jni-direct-memory-mb").hasArg().argName("MB").desc("JNI worker JVM MaxDirectMemorySize").build());
+        options.addOption(Option.builder().longOpt("jni-sdk-max-memory-mb").hasArg().argName("MB").desc("JNI/C++ SDK 内部 soft budget").build());
+        options.addOption(Option.builder().longOpt("java-xmx-mb").hasArg().argName("MB").desc("纯 Java worker JVM -Xmx").build());
+        options.addOption(Option.builder().longOpt("java-direct-memory-mb").hasArg().argName("MB").desc("纯 Java worker JVM MaxDirectMemorySize").build());
         options.addOption(Option.builder().longOpt("keep-generated-files").desc("保留中间产物").build());
+        options.addOption(Option.builder().longOpt("worker-mode").desc("internal").build());
+        options.addOption(Option.builder().longOpt("worker-implementation").hasArg().argName("NAME").desc("internal").build());
+        options.addOption(Option.builder().longOpt("worker-input-dir").hasArg().argName("PATH").desc("internal").build());
+        options.addOption(Option.builder().longOpt("worker-output-dir").hasArg().argName("PATH").desc("internal").build());
+        options.addOption(Option.builder().longOpt("worker-result-json").hasArg().argName("PATH").desc("internal").build());
+        options.addOption(Option.builder().longOpt("worker-iteration-index").hasArg().argName("N").desc("internal").build());
         options.addOption(Option.builder().longOpt("help").desc("显示帮助").build());
         return options;
     }
@@ -153,15 +176,20 @@ public final class BulkLoadPerfRunner {
             throw new IllegalArgumentException("当前规范要求 --iterations 固定为 3");
         }
 
-        Path workDir = Path.of(commandLine.getOptionValue("work-dir", DEFAULT_WORK_DIR)).toAbsolutePath().normalize();
-        Path reportJson = Path.of(commandLine.getOptionValue("report-json", workDir.resolve("perf-matrix-report.json").toString()))
-            .toAbsolutePath()
-            .normalize();
-        List<String> implementations = parseImplementations(commandLine.getOptionValue("implementations", IMPL_JNI + "," + IMPL_JAVA));
+        boolean workerMode = commandLine.hasOption("worker-mode");
+        List<String> implementations = workerMode
+            ? List.of(requireOption(commandLine, "worker-implementation"))
+            : parseImplementations(commandLine.getOptionValue("implementations", IMPL_JNI + "," + IMPL_JAVA));
         String nativeLib = commandLine.getOptionValue("native-lib", "").trim();
         if (implementations.contains(IMPL_JNI) && nativeLib.isBlank()) {
             throw new IllegalArgumentException("包含 arrow-to-hfile 时必须提供 --native-lib");
         }
+
+        Path workDir = Path.of(commandLine.getOptionValue("work-dir", DEFAULT_WORK_DIR)).toAbsolutePath().normalize();
+        Path reportJson = Path.of(commandLine.getOptionValue("report-json", "perf-matrix-report.json"))
+            .toAbsolutePath()
+            .normalize();
+
         return new RunConfig(
             nativeLib,
             commandLine.getOptionValue("table", "hfilesdk_perf"),
@@ -183,7 +211,14 @@ public final class BulkLoadPerfRunner {
             commandLine.getOptionValue("bloom", DEFAULT_BLOOM),
             commandLine.getOptionValue("error-policy", DEFAULT_ERROR_POLICY),
             parsePositiveInt(commandLine.getOptionValue("block-size", Integer.toString(DEFAULT_BLOCK_SIZE)), "block-size"),
-            commandLine.hasOption("keep-generated-files")
+            commandLine.hasOption("keep-generated-files"),
+            commandLine.getOptionValue("cpu-set", "").trim(),
+            parseNonNegativeLong(commandLine.getOptionValue("process-memory-mb", "0"), "process-memory-mb"),
+            parseNonNegativeLong(commandLine.getOptionValue("jni-xmx-mb", "0"), "jni-xmx-mb"),
+            parseNonNegativeLong(commandLine.getOptionValue("jni-direct-memory-mb", "0"), "jni-direct-memory-mb"),
+            parseNonNegativeLong(commandLine.getOptionValue("jni-sdk-max-memory-mb", "0"), "jni-sdk-max-memory-mb"),
+            parseNonNegativeLong(commandLine.getOptionValue("java-xmx-mb", "0"), "java-xmx-mb"),
+            parseNonNegativeLong(commandLine.getOptionValue("java-direct-memory-mb", "0"), "java-direct-memory-mb")
         );
     }
 
@@ -236,12 +271,20 @@ public final class BulkLoadPerfRunner {
         Files.createDirectories(inputDir);
         Files.createDirectories(outputDir);
 
-        GenerationStats generationStats = generateArrowFiles(config, scenario, inputDir);
-        List<ImplementationSummary> implementations = new ArrayList<>();
-        for (String implementation : config.implementations()) {
-            implementations.add(runImplementation(config, scenario, generationStats, outputDir.resolve(implementation), implementation));
+        try {
+            GenerationStats generationStats = generateArrowFiles(config, scenario, inputDir);
+            List<ImplementationSummary> implementations = new ArrayList<>();
+            // Keep different implementations serialized at the parent level so JNI and
+            // pure-Java runs do not contend for disk IO or CPU in the same scenario.
+            for (String implementation : config.implementations()) {
+                implementations.add(runImplementation(config, scenario, generationStats, inputDir, outputDir.resolve(implementation), implementation));
+            }
+            return new ScenarioReport(scenario, generationStats, List.copyOf(implementations));
+        } finally {
+            if (!config.keepGeneratedFiles()) {
+                deleteRecursively(scenarioDir);
+            }
         }
-        return new ScenarioReport(scenario, generationStats, List.copyOf(implementations));
     }
 
     private static GenerationStats generateArrowFiles(RunConfig config, ScenarioConfig scenario, Path inputDir) throws Exception {
@@ -321,6 +364,7 @@ public final class BulkLoadPerfRunner {
     private static ImplementationSummary runImplementation(RunConfig config,
                                                            ScenarioConfig scenario,
                                                            GenerationStats generationStats,
+                                                           Path inputDir,
                                                            Path implementationDir,
                                                            String implementation) throws Exception {
         deleteRecursively(implementationDir);
@@ -330,9 +374,7 @@ public final class BulkLoadPerfRunner {
             Path iterationDir = implementationDir.resolve(String.format(Locale.ROOT, "iter-%03d", iteration));
             deleteRecursively(iterationDir);
             Files.createDirectories(iterationDir);
-            IterationResult result = implementation.equals(IMPL_JNI)
-                ? runJniIteration(config, generationStats, iterationDir, iteration)
-                : runJavaIteration(config, generationStats, iterationDir, iteration);
+            IterationResult result = runWorkerIteration(config, scenario, generationStats, inputDir, iterationDir, implementation, iteration);
             iterationResults.add(result);
             if (!result.success()) {
                 throw new IllegalStateException("场景 " + scenario.scenarioId() + " / " + implementation + " 失败: " + result.errorMessage());
@@ -341,23 +383,136 @@ public final class BulkLoadPerfRunner {
         return new ImplementationSummary(implementation, List.copyOf(iterationResults));
     }
 
-    private static IterationResult runJniIteration(RunConfig config,
-                                                   GenerationStats generationStats,
-                                                   Path iterationDir,
-                                                   int iterationIndex) throws Exception {
+    private static IterationResult runWorkerIteration(RunConfig config,
+                                                      ScenarioConfig scenario,
+                                                      GenerationStats generationStats,
+                                                      Path inputDir,
+                                                      Path iterationDir,
+                                                      String implementation,
+                                                      int iterationIndex) throws Exception {
+        Path resultJson = iterationDir.resolve("worker-result.json");
+        Path logPath = iterationDir.resolve("worker.log");
+        Files.deleteIfExists(resultJson);
+        Files.deleteIfExists(logPath);
+
+        List<String> command = buildWorkerJavaCommand(config, inputDir, iterationDir, resultJson, implementation, iterationIndex);
+        ResourceLaunch launch = startWorkerProcess(command, logPath, config);
+        ProcessMetrics processMetrics = waitForWorker(launch);
+
+        WorkerResult workerResult;
+        if (Files.exists(resultJson)) {
+            workerResult = WorkerResult.fromJson(Files.readString(resultJson, StandardCharsets.UTF_8));
+        } else {
+            String errorMessage = "worker 未生成结果文件: " + resultJson;
+            if (Files.exists(logPath)) {
+                errorMessage += " log=" + logPath;
+            }
+            workerResult = WorkerResult.failure(
+                implementation,
+                iterationIndex,
+                errorMessage,
+                STRATEGY_DIRECT,
+                0L,
+                0L,
+                0L,
+                0,
+                implementation.equals(IMPL_JNI) ? config.parallelism() : 1,
+                0L,
+                0L,
+                "{}"
+            );
+        }
+
+        return new IterationResult(
+            workerResult.iterationIndex(),
+            workerResult.success(),
+            workerResult.errorMessage(),
+            workerResult.strategy(),
+            workerResult.elapsedMs(),
+            workerResult.hfileSizeBytes(),
+            workerResult.kvWrittenCount(),
+            workerResult.hfileCount(),
+            processMetrics.processPeakRssBytes(),
+            processMetrics.processUserCpuMs(),
+            processMetrics.processSysCpuMs(),
+            processMetrics.processExitCode(),
+            processMetrics.processExitSignal(),
+            workerResult.workerParallelism(),
+            workerResult.sdkMemoryBudgetBytes(),
+            workerResult.sdkTrackedMemoryPeakBytes(),
+            launch.controlMode(),
+            launch.controlNote(),
+            workerResult.detailJson()
+        );
+    }
+
+    private static void runWorker(CommandLine commandLine, RunConfig config) throws Exception {
+        String implementation = requireOption(commandLine, "worker-implementation");
+        Path inputDir = Path.of(requireOption(commandLine, "worker-input-dir")).toAbsolutePath().normalize();
+        Path outputDir = Path.of(requireOption(commandLine, "worker-output-dir")).toAbsolutePath().normalize();
+        Path resultJson = Path.of(requireOption(commandLine, "worker-result-json")).toAbsolutePath().normalize();
+        int iterationIndex = parsePositiveInt(requireOption(commandLine, "worker-iteration-index"), "worker-iteration-index");
+
+        Files.createDirectories(outputDir);
+        if (resultJson.getParent() != null) {
+            Files.createDirectories(resultJson.getParent());
+        }
+
+        WorkerResult result;
+        try {
+            List<Path> arrowFiles = collectArrowFiles(inputDir);
+            if (arrowFiles.isEmpty()) {
+                throw new IllegalArgumentException("worker 输入目录中没有 .arrow 文件: " + inputDir);
+            }
+            result = implementation.equals(IMPL_JNI)
+                ? runJniWorkerIteration(config, arrowFiles, outputDir, iterationIndex)
+                : runJavaWorkerIteration(config, arrowFiles, outputDir, iterationIndex);
+        } catch (Exception e) {
+            result = WorkerResult.failure(
+                implementation,
+                iterationIndex,
+                e.getMessage() == null ? e.getClass().getSimpleName() : e.getMessage(),
+                STRATEGY_DIRECT,
+                0L,
+                0L,
+                0L,
+                0,
+                implementation.equals(IMPL_JNI) ? config.parallelism() : 1,
+                0L,
+                0L,
+                "{}"
+            );
+        }
+
+        Files.writeString(resultJson, result.toJson(), StandardCharsets.UTF_8);
+        if (result.success()) {
+            System.out.printf(Locale.ROOT, "Worker %s iteration %d succeeded in %dms%n",
+                implementation, iterationIndex, result.elapsedMs());
+            return;
+        }
+        System.err.printf(Locale.ROOT, "Worker %s iteration %d failed: %s%n",
+            implementation, iterationIndex, result.errorMessage());
+        System.exit(3);
+    }
+
+    private static WorkerResult runJniWorkerIteration(RunConfig config,
+                                                      List<Path> arrowFiles,
+                                                      Path iterationDir,
+                                                      int iterationIndex) throws Exception {
         Path hfileDir = iterationDir.resolve(config.columnFamily());
         Path mergeTmpDir = iterationDir.resolve("merge-tmp");
         Files.createDirectories(hfileDir);
         Files.createDirectories(mergeTmpDir);
 
-        if (generationStats.arrowFiles().size() == 1) {
-            return runJniSingleFileIteration(config, generationStats.arrowFiles().getFirst(), hfileDir, iterationIndex);
+        long sdkMaxMemoryBytes = mbToBytes(config.jniSdkMaxMemoryMb());
+        if (arrowFiles.size() == 1) {
+            return runJniSingleFileWorkerIteration(config, arrowFiles.getFirst(), hfileDir, iterationIndex, sdkMaxMemoryBytes);
         }
 
         long start = System.nanoTime();
-        String strategy = decideStrategy(generationStats.arrowFiles(), config.mergeThresholdMb());
+        String strategy = decideStrategy(arrowFiles, config.mergeThresholdMb());
         BatchConvertOptions options = BatchConvertOptions.builder()
-            .arrowFiles(generationStats.arrowFiles())
+            .arrowFiles(arrowFiles)
             .hfileDir(hfileDir)
             .tableName(config.tableName())
             .rowKeyRule(config.rowKeyRule())
@@ -367,6 +522,9 @@ public final class BulkLoadPerfRunner {
             .bloomType(config.bloom())
             .errorPolicy(config.errorPolicy())
             .blockSize(config.blockSize())
+            .maxMemoryBytes(sdkMaxMemoryBytes)
+            // Preserve JNI directory-conversion semantics: a worker may still
+            // convert multiple Arrow files according to the configured parallelism.
             .parallelism(config.parallelism())
             .nativeLibPath(config.nativeLib())
             .build();
@@ -378,23 +536,36 @@ public final class BulkLoadPerfRunner {
             .mergeTmpDir(mergeTmpDir)
             .build();
         BatchConvertResult batchResult = new AdaptiveBatchConverter().convertAll(options, policy);
-        return new IterationResult(
+
+        long sdkBudgetBytes = 0L;
+        long sdkPeakBytes = 0L;
+        for (ConvertResult result : batchResult.results.values()) {
+            sdkBudgetBytes = Math.max(sdkBudgetBytes, result.memoryBudgetBytes);
+            sdkPeakBytes = Math.max(sdkPeakBytes, result.trackedMemoryPeakBytes);
+        }
+
+        return new WorkerResult(
             iterationIndex,
+            IMPL_JNI,
             batchResult.isFullSuccess(),
             batchResult.isFullSuccess() ? "" : "failed outputs: " + batchResult.failed.stream().map(path -> path.getFileName().toString()).sorted().toList(),
             strategy,
-            System.nanoTime() - start,
+            nanosToMillis(System.nanoTime() - start),
             batchResult.totalHfileSizeBytes,
             batchResult.totalKvWritten,
             batchResult.results.size(),
+            config.parallelism(),
+            sdkBudgetBytes,
+            sdkPeakBytes,
             batchConvertResultToJson(strategy, batchResult)
         );
     }
 
-    private static IterationResult runJniSingleFileIteration(RunConfig config,
-                                                             Path arrowFile,
-                                                             Path hfileDir,
-                                                             int iterationIndex) throws Exception {
+    private static WorkerResult runJniSingleFileWorkerIteration(RunConfig config,
+                                                                Path arrowFile,
+                                                                Path hfileDir,
+                                                                int iterationIndex,
+                                                                long sdkMaxMemoryBytes) throws Exception {
         String fileName = arrowFile.getFileName().toString();
         String hfileName = fileName.endsWith(".arrow") ? fileName.substring(0, fileName.length() - 6) + ".hfile" : fileName + ".hfile";
         Path hfilePath = hfileDir.resolve(hfileName);
@@ -411,6 +582,7 @@ public final class BulkLoadPerfRunner {
                 .bloomType(config.bloom())
                 .errorPolicy(config.errorPolicy())
                 .blockSize(config.blockSize())
+                .maxMemoryBytes(sdkMaxMemoryBytes)
                 .nativeLibPath(config.nativeLib())
                 .build()
         );
@@ -420,26 +592,32 @@ public final class BulkLoadPerfRunner {
             + "\"error_message\":\"" + jsonEscape(result.errorMessage) + "\","
             + "\"arrow_rows_read\":" + result.arrowRowsRead + ","
             + "\"kv_written_count\":" + result.kvWrittenCount + ","
+            + "\"memory_budget_bytes\":" + result.memoryBudgetBytes + ","
+            + "\"tracked_memory_peak_bytes\":" + result.trackedMemoryPeakBytes + ","
             + "\"hfile_size_bytes\":" + result.hfileSizeBytes + ","
             + "\"elapsed_ms\":" + result.elapsedMs
             + "}";
-        return new IterationResult(
+        return new WorkerResult(
             iterationIndex,
+            IMPL_JNI,
             result.isSuccess(),
             result.isSuccess() ? "" : result.errorMessage,
             STRATEGY_DIRECT,
-            System.nanoTime() - start,
+            nanosToMillis(System.nanoTime() - start),
             result.hfileSizeBytes,
             result.kvWrittenCount,
             result.isSuccess() ? 1 : 0,
+            config.parallelism(),
+            result.memoryBudgetBytes,
+            result.trackedMemoryPeakBytes,
             detailJson
         );
     }
 
-    private static IterationResult runJavaIteration(RunConfig config,
-                                                    GenerationStats generationStats,
-                                                    Path iterationDir,
-                                                    int iterationIndex) throws Exception {
+    private static WorkerResult runJavaWorkerIteration(RunConfig config,
+                                                       List<Path> arrowFiles,
+                                                       Path iterationDir,
+                                                       int iterationIndex) throws Exception {
         Path hfileDir = iterationDir.resolve(config.columnFamily());
         Files.createDirectories(hfileDir);
         ArrowToHFileJavaConverter converter = new ArrowToHFileJavaConverter();
@@ -448,7 +626,7 @@ public final class BulkLoadPerfRunner {
         long totalKvWritten = 0L;
         List<String> resultJsons = new ArrayList<>();
 
-        for (Path arrowFile : generationStats.arrowFiles()) {
+        for (Path arrowFile : arrowFiles) {
             String fileName = arrowFile.getFileName().toString();
             String hfileName = fileName.endsWith(".arrow") ? fileName.substring(0, fileName.length() - 6) + ".hfile" : fileName + ".hfile";
             Path hfilePath = hfileDir.resolve(hfileName);
@@ -467,15 +645,18 @@ public final class BulkLoadPerfRunner {
             );
             resultJsons.add(result.toJson());
             if (!result.isSuccess()) {
-                return new IterationResult(
+                return WorkerResult.failure(
+                    IMPL_JAVA,
                     iterationIndex,
-                    false,
                     result.errorMessage,
                     STRATEGY_DIRECT,
-                    System.nanoTime() - start,
+                    nanosToMillis(System.nanoTime() - start),
                     totalSize,
                     totalKvWritten,
                     resultJsons.size(),
+                    1,
+                    0L,
+                    0L,
                     "[" + String.join(",", resultJsons) + "]"
                 );
             }
@@ -483,17 +664,351 @@ public final class BulkLoadPerfRunner {
             totalKvWritten += result.kvWrittenCount;
         }
 
-        return new IterationResult(
+        return new WorkerResult(
             iterationIndex,
+            IMPL_JAVA,
             true,
             "",
             STRATEGY_DIRECT,
-            System.nanoTime() - start,
+            nanosToMillis(System.nanoTime() - start),
             totalSize,
             totalKvWritten,
-            generationStats.arrowFiles().size(),
+            arrowFiles.size(),
+            1,
+            0L,
+            0L,
             "[" + String.join(",", resultJsons) + "]"
         );
+    }
+
+    private static List<String> buildWorkerJavaCommand(RunConfig config,
+                                                       Path inputDir,
+                                                       Path iterationDir,
+                                                       Path resultJson,
+                                                       String implementation,
+                                                       int iterationIndex) throws Exception {
+        Path self = Path.of(BulkLoadPerfRunner.class.getProtectionDomain().getCodeSource().getLocation().toURI());
+        List<String> command = new ArrayList<>();
+        command.add(Path.of(System.getProperty("java.home"), "bin", "java").toString());
+        command.add("--add-opens=java.base/java.nio=ALL-UNNAMED");
+        command.add("--add-opens=java.base/java.lang=ALL-UNNAMED");
+        appendJvmLimits(command, config, implementation);
+        if (self.toString().endsWith(".jar")) {
+            command.add("-jar");
+            command.add(self.toString());
+        } else {
+            command.add("-cp");
+            command.add(System.getProperty("java.class.path"));
+            command.add(BulkLoadPerfRunner.class.getName());
+        }
+
+        command.add("--worker-mode");
+        command.add("--worker-implementation");
+        command.add(implementation);
+        command.add("--worker-input-dir");
+        command.add(inputDir.toString());
+        command.add("--worker-output-dir");
+        command.add(iterationDir.toString());
+        command.add("--worker-result-json");
+        command.add(resultJson.toString());
+        command.add("--worker-iteration-index");
+        command.add(Integer.toString(iterationIndex));
+        command.add("--table");
+        command.add(config.tableName());
+        command.add("--parallelism");
+        command.add(Integer.toString(config.parallelism()));
+        command.add("--merge-threshold");
+        command.add(Integer.toString(config.mergeThresholdMb()));
+        command.add("--trigger-size");
+        command.add(Integer.toString(config.triggerSizeMb()));
+        command.add("--trigger-count");
+        command.add(Integer.toString(config.triggerCount()));
+        command.add("--trigger-interval");
+        command.add(Integer.toString(config.triggerIntervalSeconds()));
+        command.add("--cf");
+        command.add(config.columnFamily());
+        command.add("--rule");
+        command.add(config.rowKeyRule());
+        command.add("--compression");
+        command.add(config.compression());
+        command.add("--encoding");
+        command.add(config.encoding());
+        command.add("--bloom");
+        command.add(config.bloom());
+        command.add("--error-policy");
+        command.add(config.errorPolicy());
+        command.add("--block-size");
+        command.add(Integer.toString(config.blockSize()));
+        if (!config.nativeLib().isBlank()) {
+            command.add("--native-lib");
+            command.add(config.nativeLib());
+        }
+        if (config.jniSdkMaxMemoryMb() > 0) {
+            command.add("--jni-sdk-max-memory-mb");
+            command.add(Long.toString(config.jniSdkMaxMemoryMb()));
+        }
+        return command;
+    }
+
+    private static void appendJvmLimits(List<String> command, RunConfig config, String implementation) {
+        long xmxMb = implementation.equals(IMPL_JNI) ? config.jniXmxMb() : config.javaXmxMb();
+        long directMb = implementation.equals(IMPL_JNI) ? config.jniDirectMemoryMb() : config.javaDirectMemoryMb();
+        if (xmxMb > 0) {
+            command.add("-Xmx" + xmxMb + "m");
+        }
+        if (directMb > 0) {
+            command.add("-XX:MaxDirectMemorySize=" + directMb + "m");
+        }
+    }
+
+    private static ResourceLaunch startWorkerProcess(List<String> workerJavaCommand,
+                                                     Path logPath,
+                                                     RunConfig config) throws Exception {
+        Files.createDirectories(logPath.getParent());
+        LaunchCommand launchCommand = buildLaunchCommand(workerJavaCommand, config);
+        ProcessBuilder processBuilder = new ProcessBuilder(launchCommand.command());
+        processBuilder.redirectErrorStream(true);
+        processBuilder.redirectOutput(logPath.toFile());
+        return new ResourceLaunch(processBuilder.start(), launchCommand.controlMode(), launchCommand.controlNote(), launchCommand.cgroupDir());
+    }
+
+    private static LaunchCommand buildLaunchCommand(List<String> workerJavaCommand, RunConfig config) throws Exception {
+        boolean linux = isLinux();
+        boolean wantsCpuPinning = !config.cpuSet().isBlank();
+        boolean wantsMemoryLimit = config.processMemoryMb() > 0;
+        if (!linux || (!wantsCpuPinning && !wantsMemoryLimit)) {
+            String note = (!linux && (wantsCpuPinning || wantsMemoryLimit))
+                ? "CPU/memory 硬限制仅在 Linux 上启用；当前进程未应用 OS 级硬限制。"
+                : "";
+            return new LaunchCommand(workerJavaCommand, "direct", note, null);
+        }
+
+        String execCommand = shellJoin(workerJavaCommand);
+        String controlMode = "direct";
+        List<String> noteParts = new ArrayList<>();
+        Path cgroupDir = null;
+
+        if (wantsCpuPinning) {
+            if (isCommandAvailable("taskset")) {
+                execCommand = "taskset -c " + shellQuote(config.cpuSet()) + " " + execCommand;
+                controlMode = "taskset";
+            } else {
+                noteParts.add("taskset 不可用，未应用 CPU 绑核。");
+            }
+        }
+
+        if (wantsMemoryLimit) {
+            cgroupDir = tryCreateMemoryCgroup(mbToBytes(config.processMemoryMb()));
+            if (cgroupDir != null) {
+                String script = "echo $$ > " + shellQuote(cgroupDir.resolve("cgroup.procs").toString()) + "; exec " + execCommand;
+                controlMode = controlMode.equals("taskset") ? "cgroup_v2+taskset" : "cgroup_v2";
+                return new LaunchCommand(List.of("/bin/bash", "-lc", script), controlMode, String.join(" ", noteParts), cgroupDir);
+            }
+            if (isCommandAvailable("prlimit")) {
+                execCommand = "prlimit --as=" + mbToBytes(config.processMemoryMb()) + " -- " + execCommand;
+                controlMode = controlMode.equals("taskset") ? "prlimit+taskset" : "prlimit";
+                noteParts.add("cgroup v2 不可写，已退化为 prlimit 地址空间限制。");
+            } else {
+                controlMode = controlMode.equals("taskset") ? "taskset-only" : "unbounded";
+                noteParts.add("未找到可用的 cgroup v2/prlimit，未应用 OS 级内存硬限制。");
+            }
+        }
+
+        return new LaunchCommand(List.of("/bin/bash", "-lc", "exec " + execCommand), controlMode, String.join(" ", noteParts), cgroupDir);
+    }
+
+    private static Path tryCreateMemoryCgroup(long limitBytes) {
+        try {
+            Path root = Path.of("/sys/fs/cgroup");
+            if (!Files.isRegularFile(root.resolve("cgroup.controllers"))) {
+                return null;
+            }
+            String relativePath = Files.readAllLines(Path.of("/proc/self/cgroup"), StandardCharsets.UTF_8).stream()
+                .filter(line -> line.startsWith("0::"))
+                .map(line -> line.substring(3))
+                .findFirst()
+                .orElse("/");
+            if (relativePath.isBlank()) {
+                relativePath = "/";
+            }
+            Path base = relativePath.equals("/") ? root : root.resolve(relativePath.substring(1));
+            if (!Files.isDirectory(base) || !Files.isWritable(base)) {
+                return null;
+            }
+            Path cgroupDir = base.resolve("hfilesdk-perf-" + UUID.randomUUID());
+            Files.createDirectory(cgroupDir);
+            Files.writeString(cgroupDir.resolve("memory.max"), Long.toString(limitBytes), StandardCharsets.UTF_8);
+            return cgroupDir;
+        } catch (Exception ignored) {
+            return null;
+        }
+    }
+
+    private static ProcessMetrics waitForWorker(ResourceLaunch launch) throws Exception {
+        Process process = launch.process();
+        long pid = process.pid();
+        long peakRssBytes = 0L;
+        long userTicks = 0L;
+        long sysTicks = 0L;
+        long procfsCpuFallbackMs = 0L;
+
+        while (process.isAlive()) {
+            ProcfsSample sample = readProcfsSample(pid);
+            if (sample != null) {
+                peakRssBytes = Math.max(peakRssBytes, Math.max(sample.rssBytes(), sample.hwmBytes()));
+                userTicks = sample.utimeTicks();
+                sysTicks = sample.stimeTicks();
+            } else {
+                procfsCpuFallbackMs = process.toHandle().info().totalCpuDuration()
+                    .map(Duration::toMillis)
+                    .orElse(procfsCpuFallbackMs);
+            }
+            Thread.sleep(PROCESS_SAMPLE_INTERVAL_MS);
+        }
+
+        int exitCode = process.waitFor();
+        long cgroupPeakBytes = readCgroupPeakBytes(launch.cgroupDir());
+        peakRssBytes = Math.max(peakRssBytes, cgroupPeakBytes);
+        cleanupCgroup(launch.cgroupDir());
+
+        long clkTck = readClockTicksPerSecond();
+        long userCpuMs = userTicks > 0 ? ticksToMillis(userTicks, clkTck) : procfsCpuFallbackMs;
+        long sysCpuMs = sysTicks > 0 ? ticksToMillis(sysTicks, clkTck) : 0L;
+        return new ProcessMetrics(
+            peakRssBytes,
+            userCpuMs,
+            sysCpuMs,
+            exitCode,
+            deriveExitSignal(exitCode)
+        );
+    }
+
+    private static ProcfsSample readProcfsSample(long pid) {
+        try {
+            Path statusPath = Path.of("/proc", Long.toString(pid), "status");
+            Path statPath = Path.of("/proc", Long.toString(pid), "stat");
+            if (!Files.isRegularFile(statusPath) || !Files.isRegularFile(statPath)) {
+                return null;
+            }
+
+            long rssBytes = 0L;
+            long hwmBytes = 0L;
+            for (String line : Files.readAllLines(statusPath, StandardCharsets.UTF_8)) {
+                if (line.startsWith("VmRSS:")) {
+                    rssBytes = parseProcKbLine(line);
+                } else if (line.startsWith("VmHWM:")) {
+                    hwmBytes = parseProcKbLine(line);
+                }
+            }
+
+            String stat = Files.readString(statPath, StandardCharsets.UTF_8).trim();
+            int split = stat.lastIndexOf(") ");
+            if (split < 0) {
+                return new ProcfsSample(rssBytes, hwmBytes, 0L, 0L);
+            }
+            String[] fields = stat.substring(split + 2).split(" ");
+            long utimeTicks = fields.length > 11 ? Long.parseLong(fields[11]) : 0L;
+            long stimeTicks = fields.length > 12 ? Long.parseLong(fields[12]) : 0L;
+            return new ProcfsSample(rssBytes, hwmBytes, utimeTicks, stimeTicks);
+        } catch (Exception ignored) {
+            return null;
+        }
+    }
+
+    private static long readCgroupPeakBytes(Path cgroupDir) {
+        if (cgroupDir == null) {
+            return 0L;
+        }
+        try {
+            Path peakPath = cgroupDir.resolve("memory.peak");
+            if (!Files.isRegularFile(peakPath)) {
+                return 0L;
+            }
+            String value = Files.readString(peakPath, StandardCharsets.UTF_8).trim();
+            return value.equals("max") ? 0L : Long.parseLong(value);
+        } catch (Exception ignored) {
+            return 0L;
+        }
+    }
+
+    private static void cleanupCgroup(Path cgroupDir) {
+        if (cgroupDir == null) {
+            return;
+        }
+        try {
+            Files.deleteIfExists(cgroupDir);
+        } catch (Exception ignored) {
+        }
+    }
+
+    private static long readClockTicksPerSecond() {
+        try {
+            Process process = new ProcessBuilder("getconf", "CLK_TCK").start();
+            int exit = process.waitFor();
+            if (exit != 0) {
+                return FALLBACK_CLK_TCK;
+            }
+            String raw = new String(process.getInputStream().readAllBytes(), StandardCharsets.UTF_8).trim();
+            return Long.parseLong(raw);
+        } catch (Exception ignored) {
+            return FALLBACK_CLK_TCK;
+        }
+    }
+
+    private static boolean isCommandAvailable(String name) {
+        String pathValue = System.getenv("PATH");
+        if (pathValue == null || pathValue.isBlank()) {
+            return false;
+        }
+        for (String rawDir : pathValue.split(java.io.File.pathSeparator)) {
+            if (rawDir.isBlank()) {
+                continue;
+            }
+            Path candidate = Path.of(rawDir, name);
+            if (Files.isExecutable(candidate)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private static boolean isLinux() {
+        return System.getProperty("os.name", "").toLowerCase(Locale.ROOT).contains("linux");
+    }
+
+    private static String shellJoin(List<String> command) {
+        return command.stream().map(BulkLoadPerfRunner::shellQuote).collect(Collectors.joining(" "));
+    }
+
+    private static String shellQuote(String value) {
+        return "'" + value.replace("'", "'\"'\"'") + "'";
+    }
+
+    private static long parseProcKbLine(String line) {
+        String[] parts = line.trim().split("\\s+");
+        if (parts.length < 2) {
+            return 0L;
+        }
+        return Long.parseLong(parts[1]) * 1024L;
+    }
+
+    private static long ticksToMillis(long ticks, long clkTck) {
+        if (clkTck <= 0) {
+            clkTck = FALLBACK_CLK_TCK;
+        }
+        return ticks * 1000L / clkTck;
+    }
+
+    private static int deriveExitSignal(int exitCode) {
+        return exitCode >= 128 ? exitCode - 128 : 0;
+    }
+
+    private static List<Path> collectArrowFiles(Path inputDir) throws Exception {
+        List<Path> arrowFiles = new ArrayList<>();
+        try (var stream = Files.find(inputDir, 1, (path, attr) -> attr.isRegularFile() && path.toString().endsWith(".arrow"))) {
+            stream.sorted().forEach(arrowFiles::add);
+        }
+        return arrowFiles;
     }
 
     private static void printScenarioSummary(ScenarioReport report) {
@@ -508,6 +1023,7 @@ public final class BulkLoadPerfRunner {
             System.out.println("  implementation      : " + implementation.implementation());
             System.out.println("    average_ms        : " + formatDouble(implementation.averageMillis()));
             System.out.println("    iteration_ms      : " + implementation.iterationMillisJson());
+            System.out.println("    max_peak_rss_mb   : " + formatMiB(implementation.maxProcessPeakRssBytes()));
         }
     }
 
@@ -625,6 +1141,8 @@ public final class BulkLoadPerfRunner {
             builder.append("\"error_message\":\"").append(jsonEscape(result.errorMessage)).append("\",");
             builder.append("\"arrow_rows_read\":").append(result.arrowRowsRead).append(",");
             builder.append("\"kv_written_count\":").append(result.kvWrittenCount).append(",");
+            builder.append("\"memory_budget_bytes\":").append(result.memoryBudgetBytes).append(",");
+            builder.append("\"tracked_memory_peak_bytes\":").append(result.trackedMemoryPeakBytes).append(",");
             builder.append("\"hfile_size_bytes\":").append(result.hfileSizeBytes).append(",");
             builder.append("\"elapsed_ms\":").append(result.elapsedMs);
             builder.append("}");
@@ -696,6 +1214,27 @@ public final class BulkLoadPerfRunner {
         return value;
     }
 
+    private static long parseNonNegativeLong(String raw, String optionName) {
+        long value;
+        try {
+            value = Long.parseLong(raw);
+        } catch (NumberFormatException e) {
+            throw new IllegalArgumentException("--" + optionName + " 必须为非负整数");
+        }
+        if (value < 0) {
+            throw new IllegalArgumentException("--" + optionName + " 必须为非负整数");
+        }
+        return value;
+    }
+
+    private static String requireOption(CommandLine commandLine, String option) {
+        String value = commandLine.getOptionValue(option);
+        if (value == null || value.isBlank()) {
+            throw new IllegalArgumentException("--" + option + " is required");
+        }
+        return value;
+    }
+
     private static String zeroPad(long value, int width) {
         return String.format(Locale.ROOT, "%0" + width + "d", value);
     }
@@ -708,6 +1247,10 @@ public final class BulkLoadPerfRunner {
         return TimeUnit.NANOSECONDS.toMillis(nanos);
     }
 
+    private static long mbToBytes(long mb) {
+        return mb * 1024L * 1024L;
+    }
+
     private static String formatMiB(long bytes) {
         return String.format(Locale.ROOT, "%.2f", bytes / 1024.0 / 1024.0);
     }
@@ -718,6 +1261,106 @@ public final class BulkLoadPerfRunner {
 
     private static String jsonEscape(String value) {
         return value.replace("\\", "\\\\").replace("\"", "\\\"");
+    }
+
+    private static long parseLongField(String json, String key, long defaultValue) {
+        String tag = "\"" + key + "\":";
+        int idx = json.indexOf(tag);
+        if (idx < 0) {
+            return defaultValue;
+        }
+        int start = idx + tag.length();
+        while (start < json.length() && json.charAt(start) == ' ') {
+            start++;
+        }
+        int end = start;
+        while (end < json.length()) {
+            char c = json.charAt(end);
+            if (c == ',' || c == '}') {
+                break;
+            }
+            end++;
+        }
+        String raw = json.substring(start, end).trim();
+        if (raw.startsWith("\"") && raw.endsWith("\"")) {
+            raw = raw.substring(1, raw.length() - 1);
+        }
+        try {
+            return Long.parseLong(raw);
+        } catch (NumberFormatException e) {
+            return defaultValue;
+        }
+    }
+
+    private static boolean parseBooleanField(String json, String key, boolean defaultValue) {
+        String tag = "\"" + key + "\":";
+        int idx = json.indexOf(tag);
+        if (idx < 0) {
+            return defaultValue;
+        }
+        int start = idx + tag.length();
+        while (start < json.length() && json.charAt(start) == ' ') {
+            start++;
+        }
+        if (json.startsWith("true", start)) {
+            return true;
+        }
+        if (json.startsWith("false", start)) {
+            return false;
+        }
+        return defaultValue;
+    }
+
+    private static String parseStringField(String json, String key, String defaultValue) {
+        String tag = "\"" + key + "\":\"";
+        int idx = json.indexOf(tag);
+        if (idx < 0) {
+            return defaultValue;
+        }
+        int start = idx + tag.length();
+        StringBuilder sb = new StringBuilder();
+        boolean escape = false;
+        for (int i = start; i < json.length(); i++) {
+            char c = json.charAt(i);
+            if (escape) {
+                switch (c) {
+                    case '"' -> sb.append('"');
+                    case '\\' -> sb.append('\\');
+                    case 'n' -> sb.append('\n');
+                    case 'r' -> sb.append('\r');
+                    case 't' -> sb.append('\t');
+                    default -> sb.append(c);
+                }
+                escape = false;
+            } else if (c == '\\') {
+                escape = true;
+            } else if (c == '"') {
+                break;
+            } else {
+                sb.append(c);
+            }
+        }
+        return sb.toString();
+    }
+
+    private static String parseTrailingJsonValue(String json, String key, String defaultValue) {
+        String tag = "\"" + key + "\":";
+        int idx = json.indexOf(tag);
+        if (idx < 0) {
+            return defaultValue;
+        }
+        int start = idx + tag.length();
+        while (start < json.length() && Character.isWhitespace(json.charAt(start))) {
+            start++;
+        }
+        if (start >= json.length()) {
+            return defaultValue;
+        }
+        int end = json.lastIndexOf('}');
+        if (end <= start) {
+            return defaultValue;
+        }
+        return json.substring(start, end).trim();
     }
 
     private record RunConfig(
@@ -741,7 +1384,14 @@ public final class BulkLoadPerfRunner {
         String bloom,
         String errorPolicy,
         int blockSize,
-        boolean keepGeneratedFiles
+        boolean keepGeneratedFiles,
+        String cpuSet,
+        long processMemoryMb,
+        long jniXmxMb,
+        long jniDirectMemoryMb,
+        long jniSdkMaxMemoryMb,
+        long javaXmxMb,
+        long javaDirectMemoryMb
     ) {}
 
     private record ScenarioConfig(String scenarioId, String inputMode, int arrowFileCount, int targetSizeMb) {}
@@ -750,15 +1400,120 @@ public final class BulkLoadPerfRunner {
 
     private record GenerationStats(long rows, int batches, long arrowSizeBytes, List<Path> arrowFiles, long elapsedNanos) {}
 
+    private record LaunchCommand(List<String> command, String controlMode, String controlNote, Path cgroupDir) {}
+
+    private record ResourceLaunch(Process process, String controlMode, String controlNote, Path cgroupDir) {}
+
+    private record ProcfsSample(long rssBytes, long hwmBytes, long utimeTicks, long stimeTicks) {}
+
+    private record ProcessMetrics(
+        long processPeakRssBytes,
+        long processUserCpuMs,
+        long processSysCpuMs,
+        int processExitCode,
+        int processExitSignal
+    ) {}
+
+    private record WorkerResult(
+        int iterationIndex,
+        String implementation,
+        boolean success,
+        String errorMessage,
+        String strategy,
+        long elapsedMs,
+        long hfileSizeBytes,
+        long kvWrittenCount,
+        int hfileCount,
+        int workerParallelism,
+        long sdkMemoryBudgetBytes,
+        long sdkTrackedMemoryPeakBytes,
+        String detailJson
+    ) {
+        private static WorkerResult failure(String implementation,
+                                            int iterationIndex,
+                                            String errorMessage,
+                                            String strategy,
+                                            long elapsedMs,
+                                            long hfileSizeBytes,
+                                            long kvWrittenCount,
+                                            int hfileCount,
+                                            int workerParallelism,
+                                            long sdkMemoryBudgetBytes,
+                                            long sdkTrackedMemoryPeakBytes,
+                                            String detailJson) {
+            return new WorkerResult(
+                iterationIndex,
+                implementation,
+                false,
+                errorMessage == null ? "" : errorMessage,
+                strategy,
+                elapsedMs,
+                hfileSizeBytes,
+                kvWrittenCount,
+                hfileCount,
+                workerParallelism,
+                sdkMemoryBudgetBytes,
+                sdkTrackedMemoryPeakBytes,
+                detailJson
+            );
+        }
+
+        private String toJson() {
+            return "{"
+                + "\"iteration_index\":" + iterationIndex + ","
+                + "\"implementation\":\"" + jsonEscape(implementation) + "\","
+                + "\"success\":" + success + ","
+                + "\"error_message\":\"" + jsonEscape(errorMessage) + "\","
+                + "\"strategy\":\"" + jsonEscape(strategy) + "\","
+                + "\"elapsed_ms\":" + elapsedMs + ","
+                + "\"hfile_size_bytes\":" + hfileSizeBytes + ","
+                + "\"kv_written_count\":" + kvWrittenCount + ","
+                + "\"hfile_count\":" + hfileCount + ","
+                + "\"worker_parallelism\":" + workerParallelism + ","
+                + "\"sdk_memory_budget_bytes\":" + sdkMemoryBudgetBytes + ","
+                + "\"sdk_tracked_memory_peak_bytes\":" + sdkTrackedMemoryPeakBytes + ","
+                + "\"detail\":" + detailJson
+                + "}";
+        }
+
+        private static WorkerResult fromJson(String json) {
+            return new WorkerResult(
+                (int) parseLongField(json, "iteration_index", 0),
+                parseStringField(json, "implementation", ""),
+                parseBooleanField(json, "success", false),
+                parseStringField(json, "error_message", ""),
+                parseStringField(json, "strategy", STRATEGY_DIRECT),
+                parseLongField(json, "elapsed_ms", 0),
+                parseLongField(json, "hfile_size_bytes", 0),
+                parseLongField(json, "kv_written_count", 0),
+                (int) parseLongField(json, "hfile_count", 0),
+                (int) parseLongField(json, "worker_parallelism", 1),
+                parseLongField(json, "sdk_memory_budget_bytes", 0),
+                parseLongField(json, "sdk_tracked_memory_peak_bytes", 0),
+                parseTrailingJsonValue(json, "detail", "{}")
+            );
+        }
+    }
+
     private record IterationResult(
         int iterationIndex,
         boolean success,
         String errorMessage,
         String strategy,
-        long elapsedNanos,
+        long elapsedMs,
         long hfileSizeBytes,
         long kvWrittenCount,
         int hfileCount,
+        long processPeakRssBytes,
+        long processUserCpuMs,
+        long processSysCpuMs,
+        int processExitCode,
+        int processExitSignal,
+        int workerParallelism,
+        long sdkMemoryBudgetBytes,
+        long sdkTrackedMemoryPeakBytes,
+        String processControlMode,
+        String processControlNote,
         String detailJson
     ) {
         private String toJson() {
@@ -767,10 +1522,20 @@ public final class BulkLoadPerfRunner {
                 + "\"success\":" + success + ","
                 + "\"error_message\":\"" + jsonEscape(errorMessage) + "\","
                 + "\"strategy\":\"" + jsonEscape(strategy) + "\","
-                + "\"elapsed_ms\":" + nanosToMillis(elapsedNanos) + ","
+                + "\"elapsed_ms\":" + elapsedMs + ","
                 + "\"hfile_size_bytes\":" + hfileSizeBytes + ","
                 + "\"kv_written_count\":" + kvWrittenCount + ","
                 + "\"hfile_count\":" + hfileCount + ","
+                + "\"process_peak_rss_bytes\":" + processPeakRssBytes + ","
+                + "\"process_user_cpu_ms\":" + processUserCpuMs + ","
+                + "\"process_sys_cpu_ms\":" + processSysCpuMs + ","
+                + "\"process_exit_code\":" + processExitCode + ","
+                + "\"process_exit_signal\":" + processExitSignal + ","
+                + "\"worker_parallelism\":" + workerParallelism + ","
+                + "\"sdk_memory_budget_bytes\":" + sdkMemoryBudgetBytes + ","
+                + "\"sdk_tracked_memory_peak_bytes\":" + sdkTrackedMemoryPeakBytes + ","
+                + "\"process_control_mode\":\"" + jsonEscape(processControlMode) + "\","
+                + "\"process_control_note\":\"" + jsonEscape(processControlNote) + "\","
                 + "\"detail\":" + detailJson
                 + "}";
         }
@@ -778,13 +1543,17 @@ public final class BulkLoadPerfRunner {
 
     private record ImplementationSummary(String implementation, List<IterationResult> iterationResults) {
         private double averageMillis() {
-            return iterationResults.stream().mapToLong(result -> result.elapsedNanos()).average().orElse(0.0) / 1_000_000.0;
+            return iterationResults.stream().mapToLong(IterationResult::elapsedMs).average().orElse(0.0);
+        }
+
+        private long maxProcessPeakRssBytes() {
+            return iterationResults.stream().mapToLong(IterationResult::processPeakRssBytes).max().orElse(0L);
         }
 
         private String iterationMillisJson() {
             return iterationResults.stream()
-                .map(result -> Long.toString(nanosToMillis(result.elapsedNanos())))
-                .collect(java.util.stream.Collectors.joining(",", "[", "]"));
+                .map(result -> Long.toString(result.elapsedMs()))
+                .collect(Collectors.joining(",", "[", "]"));
         }
 
         private String toJson() {
@@ -793,6 +1562,7 @@ public final class BulkLoadPerfRunner {
             builder.append("\"implementation\":\"").append(jsonEscape(implementation)).append("\",");
             builder.append("\"average_ms\":").append(formatDouble(averageMillis())).append(",");
             builder.append("\"iteration_ms\":").append(iterationMillisJson()).append(",");
+            builder.append("\"max_process_peak_rss_bytes\":").append(maxProcessPeakRssBytes()).append(",");
             builder.append("\"iterations\":[");
             for (int index = 0; index < iterationResults.size(); index++) {
                 if (index > 0) {
@@ -843,6 +1613,13 @@ public final class BulkLoadPerfRunner {
             }
             builder.append("],\n");
             builder.append("  \"iterations\": ").append(FIXED_ITERATIONS).append(",\n");
+            builder.append("  \"cpu_set\": \"").append(jsonEscape(config.cpuSet())).append("\",\n");
+            builder.append("  \"process_memory_mb\": ").append(config.processMemoryMb()).append(",\n");
+            builder.append("  \"jni_xmx_mb\": ").append(config.jniXmxMb()).append(",\n");
+            builder.append("  \"jni_direct_memory_mb\": ").append(config.jniDirectMemoryMb()).append(",\n");
+            builder.append("  \"jni_sdk_max_memory_mb\": ").append(config.jniSdkMaxMemoryMb()).append(",\n");
+            builder.append("  \"java_xmx_mb\": ").append(config.javaXmxMb()).append(",\n");
+            builder.append("  \"java_direct_memory_mb\": ").append(config.javaDirectMemoryMb()).append(",\n");
             builder.append("  \"total_ms\": ").append(nanosToMillis(totalNanos)).append(",\n");
             builder.append("  \"scenarios\": [\n");
             for (int index = 0; index < scenarioReports.size(); index++) {
